flux/apps/int/linkwarden/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linkwarden
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: linkwarden
  template:
    metadata:
      labels:
        app: linkwarden
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
          ports:
            - containerPort: 5432
              name: postgres
        - name: linkwarden
          image: ghcr.io/linkwarden/linkwarden:v2.14.1
          securityContext:
            allowPrivilegeEscalation: false
          volumeMounts:
            - name: linkwarden-data
              mountPath: /data/data
          ports:
            - containerPort: 3000
              name: http
      volumes:
        - name: linkwarden-data
          persistentVolumeClaim:
            claimName: linkwarden-data
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-data
